tempfile/derive_builder/tests/compile-fail/build_fn_error.stderr
error: Unknown field: `path`
 --> tests/compile-fail/build_fn_error.rs:4:52
  |
4 | #[builder(build_fn(error(validation_error = false, path = "hello")))]
  |                                                    ^^^^

error: Cannot set `error(validation_error = false)` when using `validate`
  --> tests/compile-fail/build_fn_error.rs:10:45
   |
10 | #[builder(build_fn(error(validation_error = false), validate = "hello"))]
   |                                             ^^^^^

error: Unknown field: `path`
  --> tests/compile-fail/build_fn_error.rs:16:26
   |
16 | #[builder(build_fn(error(path = "hello")))]
   |                          ^^^^

error: Missing field `validation_error` at build_fn/error
  --> tests/compile-fail/build_fn_error.rs:15:10
   |
15 | #[derive(Builder)]
   |          ^^^^^^^
   |
   = note: this error originates in the derive macro `Builder` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Missing field `validation_error`
  --> tests/compile-fail/build_fn_error.rs:22:20
   |
22 | #[builder(build_fn(error()))]
   |                    ^^^^^
